--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
   line-height: 1.5;
   font-weight: 400;
   background-color: white;
-  color-scheme: light dark;
   color:  black;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,6 +14,10 @@
 
 body {
   margin: 0;
+}
+
+footer {
+  
 }
 
 .container {
